fix overflow on login page

--- a/www/grid/style.css
+++ b/www/grid/style.css
@@ -27,6 +27,7 @@ body {
     background-repeat: no-repeat;
     height:100vh;
     width: 100vw;
+    overflow:hidden;
 }
 noconnect {
     position: absolute;
